ghc-4335c07/testsuite/tests/typecheck/should_fail/T12177.hs
module Foo where

bar = \x -> \x -> _

baz = \x -> \y -> \z -> \x -> \z -> _
